--- a/src/read_and_simple_net.ipynb
+++ b/src/read_and_simple_net.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "ea9c21ca-e3f0-4a93-a8e7-4e040f846aa5",
    "metadata": {},
    "outputs": [],
@@ -215,19 +215,19 @@
     "\n",
     "# https://www.tensorflow.org/tutorials/load_data/pandas_dataframe\n",
     "\n",
-    "batch_size = 1\n",
+    "batch_size = 30\n",
     "data_len = len(x)\n",
     "train_test_split = int(0.7 * data_len)\n",
     "\n",
     "dataset = tf.data.Dataset.from_tensor_slices((x.values, target.values))\n",
-    "dataset = dataset.shuffle(data_len).batch(batch_size)\n",
-    "train_dataset = dataset.take(train_test_split)\n",
-    "test_dataset = dataset.skip(train_test_split)"
+    "dataset = dataset.shuffle(data_len)\n",
+    "train_dataset = dataset.take(train_test_split).batch(batch_size)\n",
+    "test_dataset = dataset.skip(train_test_split).batch(batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "c6d64215-bd2c-4a8c-bffe-b69853baafc3",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "d0a57b8c-7139-4165-8702-16c54bb8c87c",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "63359e41-274a-44d3-b1e9-2a26e63428dc",
    "metadata": {},
    "outputs": [
@@ -274,20 +274,8 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "3456/3456 [==============================] - 22s 6ms/step - loss: 34278.8672 - accuracy: 0.0049 - mean_absolute_error: 111.4815\n",
-      "Epoch 2/2\n",
-      "3456/3456 [==============================] - 21s 6ms/step - loss: 38314.7773 - accuracy: 0.0052 - mean_absolute_error: 115.6638\n"
+      "1553/3456 [============>.................] - ETA: 11s - loss: 49062.2188 - accuracy: 0.0039 - mean_absolute_error: 116.9797"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x17ca5a4f0>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
