move data transforms to py file

--- a/src/read_and_simple_net.ipynb
+++ b/src/read_and_simple_net.ipynb
@@ -17,7 +17,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "source": [
-    "daily = data.get_transit_daily()"
+    "daily = data.get_transit_daily()\n",
+    "# gets a smaller version for faster troubleshooting\n",
+    "daily = data.data_transforms(daily)"
    ],
    "outputs": [
     {
@@ -29,82 +31,6 @@
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[0;32m/var/folders/y4/9tc0ndxs0n1g8nmwk290687h0000gn/T/ipykernel_87424/3587064976.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdaily\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_transit_daily\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m: module 'data' has no attribute 'get_transit_daily'"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# gets a smaller version for faster troubleshooting\n",
-    "daily = daily.head(100000)\n",
-    "daily = daily.dropna(axis=0, subset=[\"service_date\", \"arrival_time\", \"deviance\"])\n",
-    "daily = daily.sort_values([\"service_date\", \"arrival_time\"])"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "daily[\"timestamp\"] = np.vectorize(util.to_timestamp)(\n",
-    "    daily[\"service_date\"], daily[\"arrival_time\"]\n",
-    ")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "daily = daily.sort_values([\"trip_id\", \"timestamp\"])"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "daily.deviance = daily.deviance.apply(lambda x: pd.to_timedelta(x).total_seconds())"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "int_types = [\n",
-    "    \"trip_id\",\n",
-    "    \"arrival_time\",\n",
-    "    \"departure_time\",\n",
-    "    \"stop_time\",\n",
-    "    \"door\",\n",
-    "    \"gtfs_trip_id\",\n",
-    "    \"gtfs_stop_time_id\",\n",
-    "    \"stop_id\",\n",
-    "    \"trip_number\",\n",
-    "    \"route_number\",\n",
-    "    \"vehicle_number\",\n",
-    "    \"deviance\",\n",
-    "]\n",
-    "daily[int_types] = daily[int_types].fillna(0).astype(\"int32\")"
-   ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'daily' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/y4/9tc0ndxs0n1g8nmwk290687h0000gn/T/ipykernel_87424/1759952072.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;34m\"deviance\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m ]\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mdaily\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint_types\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaily\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint_types\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"int32\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'daily' is not defined"
      ]
     }
    ],
@@ -134,82 +60,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "daily[\"secs_stopped\"] = daily.departure_time - daily.arrival_time\n",
-    "\n",
-    "minutes_per_time_cat = 5\n",
-    "daily[\"time_cat\"] = (daily.arrival_time % (60 * 60 * 24))  // 60 // minutes_per_time_cat"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "categories = [\n",
-    "    \"trip_number\",\n",
-    "    \"gtfs_stop_time_id\",\n",
-    "    \"gtfs_stop_id\",\n",
-    "    \"gtfs_trip_id\",\n",
-    "    \"train\",\n",
-    "    \"trip_id\",\n",
-    "    \"data_agency\",\n",
-    "    \"data_source\",\n",
-    "    \"direction\",\n",
-    "    \"schedule_status\",\n",
-    "    \"service_key\",\n",
-    "    \"stop_id\",\n",
-    "    \"vehicle_number\",\n",
-    "    \"route_number\",\n",
-    "    \"trip_number\",\n",
-    "    \"time_cat\",\n",
-    "    \"door\",\n",
-    "    #     \"stop_id_pairing\",\n",
-    "]\n",
-    "\n",
-    "# should work from what I understand, but doesn't...\n",
-    "# daily[categories] = daily[categories].astype(\"category\")\n",
-    "\n",
-    "util.make_categories(categories, daily)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "\"\"\"\n",
-    "sort by trip_id or vechicle number and then timestamp before taking these diffs. \n",
-    "That's because if you sort just by time your mixing all the busses together.\n",
-    "\"\"\"\n",
-    "\n",
-    "dist = [\"pattern_distance\", \"train_mileage\"]\n",
-    "delta_dist = [\"delta_\" + x for x in dist]\n",
-    "\n",
-    "daily[delta_dist] = daily[dist].diff(1)\n",
-    "\n",
-    "daily[delta_dist] = np.where(daily[delta_dist] < 0, 0, daily[delta_dist])"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "daily[\"avg_speed\"] = daily.delta_pattern_distance / (\n",
-    "    daily.arrival_time - daily.departure_time.shift(1)\n",
-    ")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "daily.describe().transpose()"
+    "#daily.describe().transpose()"
    ],
    "outputs": [
     {
@@ -564,22 +415,6 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "empty_cols = [\n",
-    "    \"early\",\n",
-    "    \"on_time\",\n",
-    "    \"late\",\n",
-    "    \"location_distance\",\n",
-    "    \"capacity\",\n",
-    "]\n",
-    "daily = daily.drop(axis=1, columns=empty_cols)\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
     "# daily[\n",
     "#     [\n",
     "#         \"arrival_time_y\",\n",
@@ -590,15 +425,6 @@
     "#         \"offs\",\n",
     "#     ]\n",
     "# ][:50]"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "daily['label'] = daily.deviance.shift(-5) # making a prediction from 5 stops previously."
    ],
    "outputs": [],
    "metadata": {}
@@ -626,38 +452,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# https://stackoverflow.com/a/45745154/6293070\n",
-    "\n",
-    "daily = daily[~daily.isin([np.nan, np.inf, -np.inf]).any(1)]"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "used_cols = [\n",
-    "    \"direction\",\n",
-    "    \"door\",\n",
-    "    \"lift\",\n",
-    "    \"dwell\",\n",
-    "    \"ons\",\n",
-    "    \"offs\",\n",
-    "    \"maximum_speed\",\n",
-    "    \"service_key\",\n",
-    "    \"schedule_status\",\n",
-    "    \"deviance\",\n",
-    "    \"secs_stopped\",\n",
-    "    \"time_cat\",\n",
-    "    \"stop_id\",\n",
-    "    \"delta_pattern_distance\",\n",
-    "    \"avg_speed\",\n",
-    "    \"label\",\n",
-    "]\n",
-    "x = daily[used_cols]\n",
+    "x = daily[data.USED_COLS]\n",
     "x = pd.get_dummies(x)  # turns all categoricals into one hot encoded columns!\n",
-    "\n",
     "\n",
     "label = x.pop(\"label\")"
    ],
