--- a/src/process_stop_event_data.ipynb
+++ b/src/process_stop_event_data.ipynb
@@ -495,9 +495,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf_metal",
+   "display_name": "tf-gpu",
    "language": "python",
-   "name": "tf_metal"
+   "name": "tf-gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -509,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.5"
   },
   "toc-autonumbering": false,
   "toc-showcode": true,
